# src/routes/routes.polls.ts
@@ -1,13 +1,14 @@
 import express from 'express';
-import uuidv4 from 'uuid/v4';
 import status from 'http-status';
-import * as pollController from '../controllers/controllers.polls';
 import * as pollSchema from '../schema/poll.schema';
 import redis from 'redis';
-import menu from '../util/menu';
 import { Poll } from '../models/poll.model';
 import { User } from '../models/user.model';
-
+import { Category } from '../models/category.model';
+import { Participant } from '../models/participants.model';
+import { getNewCode } from '../util/code.generator';
+import passport from 'passport';
+import { upload } from '../datastores/storage';
 const client = redis.createClient();
 const router = express.Router();
 
@@ -21,7 +22,7 @@ router.get('/polls', (_req, res) => {
 		});
 });
 
-router.get('/polls/:id', (req, res) => {
+router.get('/polls/:id', passport.authenticate('jwt', { session: false }), (req, res) => {
 	const id = req.params.id;
 	Poll.findByPk(id)
 		.then((poll) => {
@@ -37,7 +38,7 @@ router.get('/polls/:id', (req, res) => {
 		});
 });
 
-router.get('/polls/:id/all', (req, res) => {
+router.get('/polls/:id/all', passport.authenticate('jwt', { session: false }), (req, res) => {
 	const id = req.params.id;
 	Poll.findAll({ where: { userId: id } })
 		.then((polls) => {
@@ -48,29 +49,31 @@ router.get('/polls/:id/all', (req, res) => {
 		});
 });
 
-router.post('/polls', (req, res) => {
+router.post('/polls', passport.authenticate('jwt', { session: false }), (req, res) => {
 	const pollData = req.body;
-	// let code: string = pollData.name.match(/\b(\w)/g).join('').toUpperCase();
-	// if (code.length < 4) {
-	// 	code = code + ('' + Math.random()).substring(2, 2 + 4 - code.length);
-	// 	pollData.code = code;
-	// } else {
-	// 	code = code.substring(0, 4);
-	// 	pollData.code = code;
-	// }
 	try {
 		const { data, valid, error } = pollSchema.createPollValidator(pollData);
 		if (!valid) throw error;
-		// const pollKey = 'poll:' + data.code;
-		// const expiry = Math.abs(new Date().getTime() - new Date(data.expiryDate).getTime()) / 1000;
+
 		User.findByPk(data.userId)
 			.then((pollUser) => {
 				if (!pollUser) {
 					res.status(status.BAD_REQUEST).send({ error: 'user does not exist' });
 				} else {
+					let image: any = null;
+					if (data.image) {
+						image = data.image;
+						delete data.image;
+					}
 					Poll.create(data)
-						.then((user) => {
-							res.status(status.CREATED).send(user);
+						.then(async (poll) => {
+							if (image) {
+								const filename = `polls/${poll.id}`;
+								image = upload(image, filename);
+								await poll.update({ image });
+								res.status(status.CREATED).send(poll);
+							}
+							res.status(status.CREATED).send(poll);
 						})
 						.catch((err) => {
 							res.status(status.INTERNAL_SERVER_ERROR).send(err);
@@ -85,18 +88,23 @@ router.post('/polls', (req, res) => {
 	}
 });
 
-router.put('/polls/:id', (req, res) => {
+router.put('/polls/:id', passport.authenticate('jwt', { session: false }), (req, res) => {
 	const id = req.params.id;
 	const pollData = req.body;
 	try {
 		const { data, valid, error } = pollSchema.updatePollValidator(pollData);
 		if (!valid) throw error;
 		Poll.findByPk(id)
-			.then((user) => {
-				user
+			.then((poll) => {
+				const { image } = data;
+				if (image) {
+					const filename = `polls/${poll.id}`;
+					data.image = upload(image, filename);
+				}
+				poll
 					.update(data)
-					.then((newUser) => {
-						res.status(status.OK).send(newUser);
+					.then((newpoll) => {
+						res.status(status.OK).send(newpoll);
 					})
 					.catch((err) => {
 						res.status(status.INTERNAL_SERVER_ERROR).send(err);
@@ -110,17 +118,17 @@ router.put('/polls/:id', (req, res) => {
 	}
 });
 
-router.delete('/polls/:id', (req, res) => {
+router.delete('/polls/:id', passport.authenticate('jwt', { session: false }), (req, res) => {
 	const id = req.params.id;
 	Poll.findByPk(id)
-		.then((user) => {
-			user
+		.then((poll) => {
+			poll
 				.destroy()
 				.then(() => {
 					res.status(202).send();
 				})
 				.catch((error) => {
-					res.status(status.INTERNAL_SERVER_ERROR).send();
+					res.status(status.INTERNAL_SERVER_ERROR).send(error.error);
 				});
 		})
 		.catch((error) => {
@@ -128,84 +136,88 @@ router.delete('/polls/:id', (req, res) => {
 		});
 });
 
-router.post('/polls/ussd', (req, res) => {
-	const userData = req.body;
-	const response = {
-		USERID: 'nalotest',
-		MSISDN: userData.MSISDN,
-		MSG: '',
-		MSGTYPE: false
-	};
-	let pollKey = '';
-	const sessionKey = 'ussd:' + userData.MSISDN;
-	let session = '0';
-	try {
-		if (!(userData.USERID && userData.USERDATA && userData.MSISDN)) {
-			throw { status: status.BAD_REQUEST, error: new Error('missing params') };
-		}
-		if (userData.MSGTYPE) {
-			client.setex(sessionKey, 120, session);
-			response.MSG = 'Please enter program code';
-			res.status(status.OK).send(response);
-		} else {
-			client.get(sessionKey, (error, sessionStore) => {
-				if (error) {
-					throw { status: status.INTERNAL_SERVER_ERROR, error };
-				}
-				if (sessionStore) {
-					sessionStore.length === 1
-						? (pollKey = 'poll:' + userData.USERDATA)
-						: 'poll:' + sessionStore.slice(1, 5);
-					session = sessionStore + userData.USERDATA;
-					client.setex(sessionKey, 120, session);
-					client.get(pollKey, (err, pollstore) => {
-						if (err) {
-							throw {
-								status: status.INTERNAL_SERVER_ERROR,
-								err
-							};
-						}
-						if (pollstore) {
-							const poll = JSON.parse(pollstore);
-							response.MSG = menu(session, poll);
-							res.status(status.OK).send(response);
-						} else {
-							pollController
-								.queryByCode(pollKey.slice(5))
-								.then((poll: any) => {
-									const expiry =
-										Math.abs(
-											new Date().getTime() -
-												new Date(poll.expiryDate).getTime()
-										) / 1000;
-									client.setex(pollKey, expiry, JSON.stringify(poll));
-									response.MSG = menu(session, poll);
-									res.status(status.OK).send(response);
-								})
-								.catch((errors) => {
-									if (errors === true) {
-										response.MSG =
-											'program code ' + pollKey.slice(5) + 'does not exist';
-										response.MSGTYPE = true;
-										res.status(status.OK).send(response);
-									} else {
-										response.MSG = 'APPLICATION DOWN';
-										response.MSGTYPE = true;
-										res.status(status.BAD_REQUEST).send(response);
-									}
-								});
-						}
+router.post('/polls/:id/activate', passport.authenticate('jwt', { session: false }), (req, res) => {
+	const id = req.params.id;
+	Poll.findOne({
+		where: { id },
+		include: [
+			{
+				model: Category,
+				include: [
+					{ model: Participant }
+				]
+			}
+		]
+	})
+		.then((poll) => {
+			if (poll && !poll.code) {
+				getNewCode()
+					.then((data: any) => {
+						poll
+							.update({ code: data.code, live: true })
+							.then((updatedPoll) => {
+								const pollKey = 'poll:' + updatedPoll.code;
+								const expiry =
+									Math.abs(
+										new Date().getTime() -
+											new Date(updatedPoll.expiryDate).getTime()
+									) / 1000;
+								client.setex(pollKey, expiry, JSON.stringify(updatedPoll));
+								res.status(status.OK).send(updatedPoll);
+							})
+							.catch((err) => {
+								res
+									.status(status.INTERNAL_SERVER_ERROR)
+									.send({ error: err.errors });
+							});
+					})
+					.catch((err) => {
+						res.status(status.INTERNAL_SERVER_ERROR).send({ error: err.errors });
 					});
-				} else {
-					client.setex(sessionKey, 120, session);
-					response.MSG = 'Please enter program code';
-					res.status(status.OK).send(response);
-				}
-			});
-		}
-	} catch (error) {
-		res.status(error.status).send(error.error);
-	}
+			}
+			if (poll && poll.code) {
+				poll
+					.update({ live: true })
+					.then((updatedPoll) => {
+						res.status(status.OK).send(updatedPoll);
+					})
+					.catch((err) => {
+						res.status(status.INTERNAL_SERVER_ERROR).send({ error: err.errors });
+					});
+			} else {
+				res.status(status.BAD_REQUEST).send({ error: 'poll does not exist' });
+			}
+		})
+		.catch((error) => {
+			res.status(status.INTERNAL_SERVER_ERROR).send({ error: error.errors });
+		});
 });
+
+router.post(
+	'/polls/:id/deactivate',
+	passport.authenticate('jwt', { session: false }),
+	(req, res) => {
+		const id = req.params.id;
+		Poll.findByPk(id)
+			.then((poll) => {
+				if (poll) {
+					client.del('poll:' + poll.code);
+					poll
+						.update({ code: null, live: false })
+						.then((updatedPoll) => {
+							res.status(status.OK).send(updatedPoll);
+						})
+						.catch((error) => {
+							res.status(status.INTERNAL_SERVER_ERROR).send(error.errors);
+						});
+				} else {
+					res.status(status.BAD_REQUEST).send({ error: 'poll does not exist' });
+				}
+			})
+			.catch((error) => {
+				res.status(status.INTERNAL_SERVER_ERROR).send(error.errors);
+			});
+	}
+);
 
 export default router;
